syntax = "proto3";

package io.products.channelProductAttribute.domain;

option java_outer_classname = "ChannelProductAttributeDomain";

message ChannelProductAttributeState {
  string channel_product_attribute_id = 1;
  string product_id = 2;
  string channel_id = 3;
  string attribute_id = 4;
  string value_id = 5;
}